...
    xmlns:local="clr-namespace:App.MarkupExtensions"
    Title="TravelHub">

    <TabBar>
        <ShellContent
            Title="{local:Translate Shell_Buscar}"
            AutomationId="Shell_SearchTab"
            SemanticProperties.Description="Shell_SearchTab"
            AutomationProperties.Name="Shell_SearchTab"
            ContentTemplate="{DataTemplate views:HomePage}"
            Route="home">
            <ShellContent.Icon>
                <FontImageSource
...
                    Size="24" />
            </ShellContent.Icon>
        </ShellContent>

        <ShellContent
            Title="{local:Translate Shell_MiCuenta}"
            AutomationId="Shell_AccountTab"
            SemanticProperties.Description="Shell_AccountTab"
            AutomationProperties.Name="Shell_AccountTab"
            ContentTemplate="{DataTemplate views:AccountPage}"
            Route="account">
            <ShellContent.Icon>
                <FontImageSource
...
