<?xml version="1.0" encoding="utf-8" ?>
<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:local="clr-namespace:App.MarkupExtensions"
             x:Class="App.Views.AccountPage"
             AutomationId="Account_Page"
             SemanticProperties.Description="Account_Page"
             AutomationProperties.Name="Account_Page"
             Title="{Binding Title}"
             IconImageSource="ic_account.png"
             Shell.NavBarIsVisible="False">

...

                                                        <HorizontalStackLayout Spacing="4" HorizontalOptions="Center">
                                <Label Text="{local:Translate Account_NoTienesCuenta}"
                                        Style="{StaticResource Caption}"
                                        VerticalTextAlignment="Center" />
                                <Label Text="{local:Translate Account_Registrate}"
                                        AutomationId="Account_RegisterLink"
                                        TextColor="{StaticResource Primary}"
                                        FontFamily="OpenSansSemibold" FontSize="13"
                                        VerticalTextAlignment="Center">
                                <Label.GestureRecognizers>
                                    <TapGestureRecognizer Command="{Binding RegisterCommand}" />
                                </Label.GestureRecognizers>
...
